welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:14: error: type mismatch;
 found   : Unit
 required: String
 	if(day==6) return "10:00";
        ^